/*
Copyright 2025 Kinorca.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package kinorca.kagimori.v1;

option java_multiple_files = true;
option java_package = "kinorca.kagimori.protobuf.v1";

option csharp_namespace = "Kinorca.Kagimori.Protobuf.V1";

option go_package = "github.com/kinorca/kagimori/v1";

service KagimoriKeyManagementService {
  rpc GetInformation(GetInformationRequest) returns (GetInformationResponse);
  rpc Encrypt(EncryptRequest) returns (EncryptResponse);
  rpc Decrypt(DecryptRequest) returns (DecryptResponse);
  rpc Migrate(MigrateRequest) returns (MigrateResponse);
}

message GetInformationRequest {}

message GetInformationResponse {
  // Version of the Kagimori KMS gRPC API. Must equal "kagimori.kinorca.com/v1".
  string version = 1;
  // Key encryption key ID.
  string kek_id = 2;
}

message EncryptRequest {
  // The data to be encrypted.
  bytes plaintext = 1;
  // Requested service name. (for Audit log)
  string service = 2;
  // Unique ID for the request.
  string uid = 3;
}

message EncryptResponse {
  // Encrypted data.
  bytes ciphertext = 1;
  // KEK ID used for encrypt DEK.
  string kek_id = 2;
  // The data required for a decryption.
  map<string, bytes> annotations = 3;
}

message DecryptRequest {
  bytes ciphertext = 1;
  string service = 2;
  string uid = 3;
  string kek_id = 4;
  map<string, bytes> annotations = 5;
}

message DecryptResponse {
  bytes plaintext = 1;
}

message MigrateRequest {
  repeated DecryptRequest requests = 1;
}

message MigrateResponse {
  repeated EncryptResponse responses = 1;
}
